--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^1.1.2
+  rive: ^0.6.7
+  flare_flutter: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -48,6 +50,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 assets:
   - assets/Imagen1.png
+  - assets/connection.flr
+  - assets/Empty.flr
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
